--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "faker": "^4.1.0",
+    "napajs": "^0.2.3",
     "sequelize": "^4.39.0",
     "tedious": "^2.6.4",
     "threads": "^0.12.0",
